# iceberg-rust

./: .licenserc.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  Roadmap.md  deny.toml
docs/: ENGINE_CONTRACT.md
iceberg-spark-pyspark/: README.md  pyproject.toml
iceberg-spark-pyspark/pyspark/: __init__.py
iceberg-spark-pyspark/pyspark/sql/: column.py  functions.py  row.py
iceberg-spark-python/: CHANGELOG.md  HANDOFF.md  PARITY_PLAN.md  PLAN.md  README.md  pyproject.toml
iceberg-spark-python/docs/: catalog-auth-guide.md  cheat-sheet.md  migration-guide.md  user-guide.md
iceberg-spark-python/docs/examples/: 01_quickstart.py  02_dataframe_ops.py  03_dml_operations.py  04_partitioned_tables.py  05_time_travel.py
iceberg-spark-python/iceberg_spark/: __init__.py  catalog_api.py  catalog_ops.py  column.py  dataframe.py  functions.py  grouped_data.py  reader.py  row.py  session.py  sql_preprocessor.py  types.py  window.py  writer.py  writer_v2.py
iceberg-spark-python/iceberg_spark/_internal/: catalog_factory.py  display.py  table_registration.py  type_mapping.py
iceberg-spark-python/pyspark/sql/: __init__.py  types.py  window.py
iceberg-spark-python/tests/: test_alter_tblproperties.py  test_column_methods.py  test_complex_types.py  test_ctas.py  test_dataframe_ext.py  test_dataframe_methods.py  test_datafusion_integration.py  test_display.py  test_error_handling.py  test_functions_agg.py  test_functions_collection.py  test_functions_datetime.py  test_functions_datetime_ext.py  test_functions_math.py  test_functions_misc.py  test_functions_sprint2.py  test_functions_string.py  test_json_functions.py  test_map_functions.py  test_multi_catalog.py  test_partition_overwrite_filter.py  test_phase2_features.py  test_phase3_features.py  test_phase4_dml.py  test_pyspark_shim.py  test_quick_wins.py  test_row.py  test_session_properties.py  test_session_stubs.py  test_sprint3_stubs.py  test_sql_commands_ext.py  test_sql_ddl.py  test_sql_preprocessor.py  test_stat_functions.py  test_types.py  test_udf.py  test_unpivot.py
iceberg-spark-python/tests/docker/glue-catalog/: docker-compose.yaml
iceberg-spark-python/tests/docker/rest-catalog/: docker-compose.yaml
iceberg-spark-python/tests/integration/: conftest.py  test_dml_e2e.py  test_glue_catalog.py  test_metadata_tables.py  test_partitioned_tables.py  test_rest_catalog.py  test_session_e2e.py  test_tempview_dml.py  test_time_travel.py
scripts/: check_agent_artifacts.sh  check_matrix_anchors.sh  run_interop_suites.sh
skills/: Fable.md  Haiku.md  Opus.md  Sonnet.md  map.md
task/: a1-nan-residual-brief.md  a2-nulls-first-brief.md  audit-review-plan.md  b-eqdel-panic-hang-brief.md  bug-002-name-mapping-scan-brief.md  c-serde-arity-brief.md  d-hardening-quickwins-brief.md  e-typed-error-kinds-brief.md  g1-followups-residue-closure-brief.md  g1-glue-type-string-byte-parity-brief.md  g2-incremental-name-mapping-pin-brief.md  g2-namespace-not-empty-brief.md  g3-config-debug-sweep-brief.md  g3-hms-type-string-parity-brief.md  g4-vended-credentials-brief.md  g5-oauth-refresh-brief.md  lessons.md  r158-staged-txn-interop-brief.md  todo.md  (+1 more)
(+274 files in other folders)
