[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iceberg-spark-pyspark"
version = "0.1.0"
description = "PySpark compatibility shim for iceberg-spark — routes pyspark.sql imports to iceberg_spark"
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
keywords = ["iceberg", "spark", "pyspark", "datafusion", "sql", "data-lake", "arrow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "iceberg-spark>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/apache/iceberg-rust"
Repository = "https://github.com/apache/iceberg-rust/tree/main/iceberg-spark-pyspark"
Documentation = "https://github.com/apache/iceberg-rust/tree/main/iceberg-spark-python#readme"
Changelog = "https://github.com/apache/iceberg-rust/tree/main/iceberg-spark-python/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["pyspark"]
