[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iceberg-spark"
version = "0.1.0"
description = "PySpark-compatible SQL interface powered by DataFusion + Iceberg Rust"
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
keywords = ["iceberg", "spark", "pyspark", "datafusion", "sql", "data-lake", "arrow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "datafusion>=50",
    "pyiceberg[pyarrow]>=0.10.0",
    "pyiceberg-core>=0.7.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
sql-catalog = ["sqlalchemy>=2.0", "pyiceberg[sql-sqlite]>=0.10.0"]
glue-catalog = ["boto3>=1.28"]
pyspark-compat = ["iceberg-spark-pyspark>=0.1.0"]
docs = ["pdoc>=14.0"]
dev = [
    "pytest>=7.0",
    "pandas>=1.5",
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/apache/iceberg-rust"
Repository = "https://github.com/apache/iceberg-rust/tree/main/iceberg-spark-python"
Documentation = "https://github.com/apache/iceberg-rust/tree/main/iceberg-spark-python#readme"
Changelog = "https://github.com/apache/iceberg-rust/tree/main/iceberg-spark-python/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["iceberg_spark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: mark test as requiring a real Iceberg catalog (SQLite/REST)",
    "docker: mark test as requiring Docker (REST/Glue catalog tests)",
]
